# TRT_PixelShuffle

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pixel_shuffle.cu  pixel_shuffle.hpp  pixel_shuffle.py
src/include/pixel_shuffle/: pixelShufflePlugin.hpp
src/pixel_shuffle/: pixelShufflePlugin.cpp  pixel_shuffle.cu
